--- a/part1.yml
+++ b/part1.yml
@@ -38,7 +38,7 @@ parts:
         com: echo ''
 
       - cap: Now let’s build an image, giving it a special name that points to our local cluster registry.
-        com: docker build -t 127.0.0.1:30400/hello-kenzan:latest -f applications/hello-kenzan/Dockerfile applications/hello-kenzan
+        com: docker build -t nandanamvicky/hello-kenzan:latest -f applications/hello-kenzan/Dockerfile applications/hello-kenzan
 
       - cap: We’ve built the image, but before we can push it to the registry, we need to set up a temporary proxy. By default the Docker client can only push to HTTP (not HTTPS) via localhost. To work around this, we’ll set up a Docker container that listens on 127.0.0.1:30400 and forwards to our cluster. First, build the image for our proxy container.
         com: docker build -t socat-registry -f applications/socat/Dockerfile applications/socat
@@ -47,7 +47,7 @@ parts:
         com: docker stop socat-registry; docker rm socat-registry; docker run -d -e "REG_IP=`minikube ip`" -e "REG_PORT=30400" --name socat-registry -p 30400:5000 socat-registry
 
       - cap: With our proxy container up and running, we can now push our hello-kenzan image to the local repository.
-        com: docker push 127.0.0.1:30400/hello-kenzan:latest
+        com: docker push nandanamvicky/hello-kenzan:latest
 
       - cap: The proxy’s work is done, so you can go ahead and stop it.
         com: docker stop socat-registry;
