--- a/applications/hello-kenzan/Jenkinsfile
+++ b/applications/hello-kenzan/Jenkinsfile
@@ -17,6 +17,8 @@ node {
         sh "docker build -t ${imageName} part1/hello-kenzan"
     
     stage "Push"
+        withCredentials([string(credentialsId: 'docker-pwd', variable: 'dockerhubpwd')]) {
+        sh "docker login -u nandanamvicky -p Qazwsx123$"
 
         sh "docker push ${imageName}"
 
