--- a/applications/hello-kenzan/Jenkinsfile
+++ b/applications/hello-kenzan/Jenkinsfile
@@ -16,12 +16,12 @@ node {
     
         sh "docker build -t ${imageName} part1/hello-kenzan"
     
+    stage "Credentials"
+        withCredentials([string(credentialsId: 'docker-pwd', variable: 'dockerhubpwd')]) 
+        sh "docker login -u nandanamvicky -p Qazwsx123$"
+    
     stage "Push"
-        withCredentials([string(credentialsId: 'docker-pwd', variable: 'dockerhubpwd')]) {
-        sh "docker login -u nandanamvicky -p Qazwsx123"
-
         sh "docker push ${imageName}"
-
     stage "Deploy"
 
         sh "sed 's#__IMAGE__#'$BUILDIMG'#' part1/hello-kenzan/k8s/deployment.yaml | kubectl apply -f -"
