--- a/manifests/jenkins.yaml
+++ b/manifests/jenkins.yaml
@@ -53,17 +53,15 @@ subjects:
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  creationTimestamp: null
-  name: kubectl-jenkins-context
+  name: aws-auth
+  namespace: kube-system
 data:
-  kubectl-config-context.sh: |-
-    #!/bin/bash -v
-
-    kubectl config set-credentials jenkins --token=$(cat /var/run/secrets/kubernetes.io/serviceaccount/token)
-    kubectl config set-cluster minikube --server="https://192.168.99.100:8443" --certificate-authority="/var/run/secrets/kubernetes.io/serviceaccount/ca.crt"
-    kubectl config set-context jenkins-minikube --cluster=minikube --user=jenkins --namespace=$(cat /var/run/secrets/kubernetes.io/serviceaccount/namespace)
-    kubectl config use-context jenkins-minikube
-    chmod 755 ~/.kube/config
+  mapRoles: |
+    - rolearn: arn:aws:iam::738572153508:role/edcast-qa-terraform-node
+      username: system:node:{{EC2PrivateDNSName}}
+      groups:
+        - system:bootstrappers
+        - system:nodes
 
 ---
 
